#First Release For BITStore - Semi Clean Architecture , Five tables CRUD OP, #MST - Enum Folder

--- a/MarkaziaBITStore/appsettings.json
+++ b/MarkaziaBITStore/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP100\\SQLEXPRESS;Database=BITSTORE-Test;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DefaultConnectionVPN": "Server=85.159.217.13;Database=BITSTORE-Test;User Id=m.Abdalhaq;Password=Abd@123;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "ThisIsMySuperStrongSecretKey123456789",
+    "Issuer": "MarkaziaBITStore",
+    "Audience": "MarkaziaBITStoreUsers",
+    "ExpireMinutes": 120
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
