#QueryFilter class for dbcontexts , testing #EndPoints and minimum modifications

--- a/MarkaziaBITStore/appsettings.json
+++ b/MarkaziaBITStore/appsettings.json
@@ -9,7 +9,21 @@
     "Audience": "MarkaziaBITStoreUsers",
     "ExpireMinutes": 120
   },
-
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Seq" ],
+    "Properties": {
+      "Application": "Markazia.BITStoreAPI"
+    },
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://localhost:5341" }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
