#Massive changes - Renaming Ent/Props v1.0 #Identity column PrimaryKey , Services

--- a/MarkaziaBITStore/appsettings.json
+++ b/MarkaziaBITStore/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP100\\SQLEXPRESS;Database=BITSTORE-Test;Trusted_Connection=True;TrustServerCertificate=True;",
-    "DefaultConnectionVPN": "Server=85.159.217.13;Database=BITSTORE-Test;User Id=m.Abdalhaq;Password=Abd@123;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnectionVPN": "Server=85.159.217.13;Database=BITNULL;User Id=m.Abdalhaq;Password=Abd@123;TrustServerCertificate=True;"
   },
   "Jwt": {
     "Key": "ThisIsMySuperStrongSecretKey123456789",
