Moving Folders - include adding SharedProject

--- a/MarkaziaBITStore.Application/MarkaziaBITStore.Application.csproj
+++ b/MarkaziaBITStore.Application/MarkaziaBITStore.Application.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Markazia-Standards\MarkaziaWebCommon\MarkaziaWebCommon.csproj" />
+    <ProjectReference Include="..\MarkaziaBITStore.Shared\MarkaziaBITStore.Shared.csproj" />
   </ItemGroup>
 
 </Project>
